--- a/src/index.css
+++ b/src/index.css
@@ -58,9 +58,7 @@
 
 html {
   line-height: 1.5; /* 1 */
-  text-size-adjust: 100%; /* 2 */
-  tab-size: 4; /* 3 */
-  tab-size: 4;
+  text-size-adjust: 100%; /* 2 */ /* 3 */
      tab-size: 4; /* 3 */
   font-family: Arial, sans-serif; /* 4 */
   font-feature-settings: normal; /* 5 */
@@ -75,6 +73,9 @@ html {
 body {
   margin: 0; /* 1 */
   line-height: inherit; /* 2 */
+  width: 100%;
+  height: 100%;
+  background-image: url("/SHZe50s.gif");
 }
 
 /*
@@ -94,7 +95,6 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 */
 
 abbr:where([title]) {
-  text-decoration: underline dotted;
           text-decoration: underline dotted;
 }
 
@@ -345,7 +345,7 @@ textarea {
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
 
-input::placeholder, textarea::-moz-placeholder {
+input::placeholder, textarea::placeholder {
   opacity: 1; /* 1 */
   color: #9ca3af; /* 2 */
 }
@@ -664,8 +664,6 @@ video {
 }
 
 .appearance-none {
-  appearance: none;
-     appearance: none;
           appearance: none;
 }
 
@@ -893,7 +891,6 @@ video {
 }
 
 .object-cover {
-  object-fit: cover;
      object-fit: cover;
 }
 
@@ -1043,7 +1040,7 @@ video {
   -moz-osx-font-smoothing: auto;
 }
 
-.placeholder500::-moz-placeholder {
+.placeholder500::placeholder {
   --tw-placeholder-opacity: 1;
 
   color: rgb(107 114 128 / var(--tw-placeholder-opacity));
@@ -1083,7 +1080,6 @@ video {
 .backdrop-blur-lg {
   --tw-backdrop-blur: blur(16px);
 
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
